--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,10 @@
+html,
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #F1F1F1;
+}
+
 body {
   font: 12px 'Open Sans','Helvetica Neue', Helvetica, Arial, sans-serif;
 }
