--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,11 +9,11 @@ body {
   font: 12px 'Open Sans','Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-h1 {font-size: 4rem}
-h2 {font-size: 2.5rem}
-h3 {font-size: 1.3rem}
-h4 {font-size: 1.2rem}
-h5 {font-size: 1.1rem}
+h1 {font-size: 4em}
+h2 {font-size: 2.5em}
+h3 {font-size: 1.3em}
+h4 {font-size: 1.2em}
+h5 {font-size: 1.1em}
 h6 {font-size: 1rem}
 
 h1,
